--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "GLaDOS"]
 	path = GLaDOS
 	url = git@github.com:davesarmoury/GLaDOS.git
+[submodule "jetson-containers"]
+	path = jetson-containers
+	url = git@github.com:dusty-nv/jetson-containers.git
