--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = git@github.com:dusty-nv/jetson-containers.git
 [submodule "vosk-server"]
 	path = vosk-server
-	url = https://github.com/alphacep/vosk-server
+	url = git@github.com:davesarmoury/vosk-server.git
