--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -3,3 +3,6 @@ adafruit_circuitpython_neopixel_spi==1.0.11
 Requests==2.32.3
 sounddevice==0.5.1
 websockets==15.0
+Jetson.GPIO
+board
+neopixel_spi
